[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/World/StuffSpawner/Stuff/BaseStuff.gd" type="Script" id=1]
[ext_resource path="res://slkscre.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0.152941, 0.152941, 0.266667, 1 )
extra_spacing_char = -2
font_data = ExtResource( 2 )

[node name="BaseStuff" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.960784, 0.937255, 1 )
text = "+15"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -10, -10, 20, 200 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
bus = "sound"
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
